--- a/CSS-End-3/index.html
+++ b/CSS-End-3/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="navlinks">
-        <a href="#" class="link-blog"><i class="fa fa-laptop"></i> Check out my blog</a>
-        <a href="#" class="link-twitter"><i class="fa fa-twitter"></i>Follow me on Twitter</a>
-        <a href="#" class="link-linkedin"><i class="fa fa-linkedin"></i>Connect on LinkedIn</a>
-        <a href="#" class="link-facebook"><i class="fa fa-facebook"></i>Like my Facebook page</a>
-        <a href="#" class="link-github"><i class="fa fa-github"></i>See projects on Github</a>
+        <a href="#" class="navlink_link-blog"><i class="fa fa-laptop"></i> Check out my blog</a>
+        <a href="#" class="navlink_link-twitter"><i class="fa fa-twitter"></i>Follow me on Twitter</a>
+        <a href="#" class="navlink_link-linkedin"><i class="fa fa-linkedin"></i>Connect on LinkedIn</a>
+        <a href="#" class="navlink_link-facebook"><i class="fa fa-facebook"></i>Like my Facebook page</a>
+        <a href="#" class="navlink_link-github"><i class="fa fa-github"></i>See projects on Github</a>
     </div>
 
 </body>
